fix thermal consistency curve link

--- a/frontend/javascripts/dynexp/thermal_consistency/views/analyze.html
+++ b/frontend/javascripts/dynexp/thermal_consistency/views/analyze.html
@@ -60,7 +60,7 @@
   </div>
 
   <div class="text-center" ng-if="!analyzing">
-    <a target="_blank" href="/#/experiments/{{experiment.id}}/run-experiment?chart=melt-curve">View Melt Curve</a>
+    <a target="_blank" href="/#/experiments/{{experiment_id}}/run-experiment?chart=melt-curve">View Melt Curve</a>
   </div>
 
   <h3 class="text-center" ng-show="tm_values" ng-class="(analyzedExp['delta_Tm'][1] ? 'text-success':'text-danger')">
