new design for PIKA running

--- a/frontend/javascripts/app/views/plate-layout.html
+++ b/frontend/javascripts/app/views/plate-layout.html
@@ -17,7 +17,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <div ng-controller="PlateLayoutCtrl">
-    <div menu-overlay sidemenu-template="app/views/experiment/left-menu.html">
+    <div menu-overlay>
         <div full-height offset="37" class="plate-layout-wrapper" style="display: flex; flex-direction: column;">
             <header-status experiment-id="experiment.id">
                 <div class="stripes-and-name" toggle-sidemenu>
