--- a/frontend/stylesheets/dynexp/chai-template/directives/header-exp-status.scss
+++ b/frontend/stylesheets/dynexp/chai-template/directives/header-exp-status.scss
@@ -66,5 +66,13 @@
         margin-bottom: 2px;
       }
     }
+
+    .stripes{
+      cursor: context-menu;
+      margin-right: 20px;
+      img{
+        width: 30px;
+      }
+    }
   }
 }
