--- a/frontend/javascripts/dynexp/pika_test/views/v2/exp-running.html
+++ b/frontend/javascripts/dynexp/pika_test/views/v2/exp-running.html
@@ -1,12 +1,25 @@
 <div ng-controller="PikaExpRunningCtrl">
-  <div class="pika-wrapper">
+  <div class="pika-wrapper" side-menu-layout>
     <header-exp-status experiment-id="experiment.id">
-      <div class="home-link CB1-M" ui-sref="home()">
-        <img src='/images/dynexp/pika-test/menu-back-white-only.svg'/>
-        Back to Home
+      <div class="stripes-and-name" toggle-sidemenu>
+        <div class="stripes">
+          <img src='/images/menu-white.svg'/>
+        </div>
       </div>
     </header-exp-status>
     <div class="pika-content">
-    </div>    
+      <p class="description CX2">
+        Your experiment is running. Please do not open the hardware unless instructed to here.
+      </p>
+      <p class="time-status CX3-M">
+        Time Remaining:
+      </p>
+      <p class="digit-time CX1-L">
+        1:13:13
+      </p>
+      <p class="CX4">
+        Expected complete at roughly 3:42
+      </p>
+    </div>
   </div>
 </div>
