--- a/frontend/stylesheets/dynexp/chai-template/fonts.scss
+++ b/frontend/stylesheets/dynexp/chai-template/fonts.scss
@@ -47,6 +47,12 @@
     line-height: 26px;
   }
 
+  .CH1-M{
+    font-family: 'DINOT--Medium', Arial, sans-serif;
+    font-size: 18px;
+    line-height: 26px;
+  }
+
   .CB1{
     font-family: 'DINOT--Regular', Arial, sans-serif;
     font-size: 16px;
@@ -126,4 +132,27 @@
     line-height: 11px;    
   }
 
+  .CX1-L{
+    font-family: 'DINOT--Light', Arial, sans-serif;
+    font-size: 140px;
+    line-height: 160px;
+  }
+
+  .CX2{
+    font-family: 'DINOT--Regular', Arial, sans-serif;
+    font-size: 22px;
+    line-height: 28px;
+  }
+
+  .CX3-M{
+    font-family: 'DINOT--Medium', Arial, sans-serif;
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  .CX4{
+    font-family: 'DINOT--Regular', Arial, sans-serif;
+    font-size: 18px;
+    line-height: 20px;
+  }
 }
