--- a/frontend/stylesheets/dynexp/chai-template/variables.scss
+++ b/frontend/stylesheets/dynexp/chai-template/variables.scss
@@ -6,6 +6,7 @@ $red: red;
 // Set Wells Page
 $section-border-color: rgba(0,0,0,0.16);
 $cell-border-color: #707070;
+$sub-border-color: #BFBFBF;
 $well-type-color: #000B60;
 $well-number-color: #BFBFBF;
 $text-cursor-color: #00CEFF;
